<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/menu_nav_my_profile"
            android:title="@string/nav_my_profile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/menu_nav_change_password"
            android:title="@string/nav_change_password"
            android:icon="@drawable/ic_change_pass"/>

        <item
            android:id="@+id/menu_nav_history"
            android:title="@string/nav_history"
            android:icon="@drawable/ic_history"/>

        <item
            android:id="@+id/menu_nav_statistical"
            android:title="Statistical"
            android:icon="@drawable/ic_quantitative"/>

        <item
            android:id="@+id/menu_nav_log_out"
            android:title="@string/nav_log_out"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>